exclude vulnerable (and unnecessary!) transitive dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -272,6 +272,10 @@
 					<groupId>commons-logging</groupId>
   					<artifactId>commons-logging</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>bouncycastle</groupId>
+					<artifactId>bcprov-jdk14</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
