--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 
 		<!-- dependency versions -->
 		<version.h2>1.4.198</version.h2>
+		<version.mysql-client>[8.0.16,)</version.mysql-client>
 		<version.jackson>2.9.8</version.jackson>
 		<version.log4j>2.10.0</version.log4j>
 		<version.ebean>2.8.1</version.ebean>
@@ -91,6 +92,11 @@
 			    <artifactId>h2</artifactId>
 			    <version>${version.h2}</version>
 			</dependency>
+			<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${version.mysql-client}</version>
+		</dependency>
 		</dependencies>
 	</dependencyManagement>
 
