--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
 		<version.jpa>1.0.2</version.jpa>
 		<version.supercsv>2.4.0</version.supercsv>
 		<version.xstream>1.4.18</version.xstream>
+		<version.log4j2>2.15.0</version.log4j2>
 		<version.hibernate-commons-annotations>5.1.0.Final</version.hibernate-commons-annotations>
 		<version.commons-beanutils>1.9.4</version.commons-beanutils>
 		<version.commons-collections>3.2.2</version.commons-collections>
@@ -85,6 +86,16 @@
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
 				<version>${version.commons-io}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-to-slf4j</artifactId>
+				<version>${version.log4j2}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-api</artifactId>
+				<version>${version.log4j2}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
